cmake_minimum_required(VERSION 3.6)

start_sources()
# -- hdf5.waf_files --
sources_platform(WIN32)
add_sources("NoUberFile"
	PROJECTS hdf5
	SOURCE_GROUP "Configuration"
		"windows/H5pubconf.h"
		"windows/H5Tinit.c"
		"windows/H5lib_settings.c"
	)
sources_platform(LINUX)
add_sources("NoUberFile"
	PROJECTS hdf5
	SOURCE_GROUP "Configuration"
		"linux/H5pubconf.h"
		"linux/H5Tinit.c"
		"linux/H5lib_settings.c"
	)

sources_platform(ALL)
add_sources("NoUberFile"
	PROJECTS hdf5

	SOURCE_GROUP "H5"
		"${SDK_DIR}/hdf5/src/H5.c"
		"${SDK_DIR}/hdf5/src/H5checksum.c"
		"${SDK_DIR}/hdf5/src/H5dbg.c"
		"${SDK_DIR}/hdf5/src/H5system.c"
		"${SDK_DIR}/hdf5/src/H5timer.c"
		"${SDK_DIR}/hdf5/src/H5trace.c"
		"${SDK_DIR}/hdf5/src/H5api_adpt.h"
		"${SDK_DIR}/hdf5/src/H5private.h"
		"${SDK_DIR}/hdf5/src/H5public.h"
		"${SDK_DIR}/hdf5/src/H5version.h"
		"${SDK_DIR}/hdf5/src/H5overflow.h"
		"${SDK_DIR}/hdf5/src/H5win32defs.h"
	SOURCE_GROUP "H5A"
		"${SDK_DIR}/hdf5/src/H5A.c"
		"${SDK_DIR}/hdf5/src/H5Abtree2.c"
		"${SDK_DIR}/hdf5/src/H5Adense.c"
		"${SDK_DIR}/hdf5/src/H5Adeprec.c"
		"${SDK_DIR}/hdf5/src/H5Aint.c"
		"${SDK_DIR}/hdf5/src/H5Atest.c"
		"${SDK_DIR}/hdf5/src/H5Apkg.h"
		"${SDK_DIR}/hdf5/src/H5Aprivate.h"
		"${SDK_DIR}/hdf5/src/H5Apublic.h"
	SOURCE_GROUP "H5AC"
		"${SDK_DIR}/hdf5/src/H5AC.c"
		"${SDK_DIR}/hdf5/src/H5ACpkg.h"
		"${SDK_DIR}/hdf5/src/H5ACprivate.h"
		"${SDK_DIR}/hdf5/src/H5ACpublic.h"
	SOURCE_GROUP "H5B"
		"${SDK_DIR}/hdf5/src/H5B.c"
		"${SDK_DIR}/hdf5/src/H5Bcache.c"
		"${SDK_DIR}/hdf5/src/H5Bdbg.c"
		"${SDK_DIR}/hdf5/src/H5B2pkg.h"
		"${SDK_DIR}/hdf5/src/H5B2public.h"
		"${SDK_DIR}/hdf5/src/H5Bpkg.h"
		"${SDK_DIR}/hdf5/src/H5Bpublic.h"
		"${SDK_DIR}/hdf5/src/H5Bprivate.h"
	SOURCE_GROUP "H5B2"
		"${SDK_DIR}/hdf5/src/H5B2.c"
		"${SDK_DIR}/hdf5/src/H5B2cache.c"
		"${SDK_DIR}/hdf5/src/H5B2dbg.c"
		"${SDK_DIR}/hdf5/src/H5B2hdr.c"
		"${SDK_DIR}/hdf5/src/H5B2int.c"
		"${SDK_DIR}/hdf5/src/H5B2stat.c"
		"${SDK_DIR}/hdf5/src/H5B2test.c"
		"${SDK_DIR}/hdf5/src/H5B2private.h"
	SOURCE_GROUP "H5C"
		"${SDK_DIR}/hdf5/src/H5C.c"
		"${SDK_DIR}/hdf5/src/H5Cpkg.h"
		"${SDK_DIR}/hdf5/src/H5Cprivate.h"
		"${SDK_DIR}/hdf5/src/H5Cpublic.h"
	SOURCE_GROUP "H5CS"
		"${SDK_DIR}/hdf5/src/H5CS.c"
		"${SDK_DIR}/hdf5/src/H5CSprivate.h"
	SOURCE_GROUP "H5D"
		"${SDK_DIR}/hdf5/src/H5D.c"
		"${SDK_DIR}/hdf5/src/H5Dcompact.c"
		"${SDK_DIR}/hdf5/src/H5Dbtree.c"
		"${SDK_DIR}/hdf5/src/H5Dchunk.c"
		"${SDK_DIR}/hdf5/src/H5Dcontig.c"
		"${SDK_DIR}/hdf5/src/H5Ddbg.c"
		"${SDK_DIR}/hdf5/src/H5Ddeprec.c"
		"${SDK_DIR}/hdf5/src/H5Defl.c"
		"${SDK_DIR}/hdf5/src/H5Dfill.c"
		"${SDK_DIR}/hdf5/src/H5Dint.c"
		"${SDK_DIR}/hdf5/src/H5Dio.c"
		"${SDK_DIR}/hdf5/src/H5Dlayout.c"
		"${SDK_DIR}/hdf5/src/H5Dmpio.c"
		"${SDK_DIR}/hdf5/src/H5Doh.c"
		"${SDK_DIR}/hdf5/src/H5Dscatgath.c"
		"${SDK_DIR}/hdf5/src/H5Dselect.c"
		"${SDK_DIR}/hdf5/src/H5Dtest.c"
		"${SDK_DIR}/hdf5/src/H5Dpkg.h"
		"${SDK_DIR}/hdf5/src/H5Dprivate.h"
		"${SDK_DIR}/hdf5/src/H5Dpublic.h"
	SOURCE_GROUP "H5DO"
		"${SDK_DIR}/hdf5/hl/src/H5DO.c"
		"${SDK_DIR}/hdf5/hl/src/H5DOpublic.h"
	SOURCE_GROUP "H5DS"
		"${SDK_DIR}/hdf5/hl/src/H5DS.c"
		"${SDK_DIR}/hdf5/hl/src/H5DSprivate.h"
		"${SDK_DIR}/hdf5/hl/src/H5DSpublic.h"
	SOURCE_GROUP "H5E"
		"${SDK_DIR}/hdf5/src/H5E.c"
		"${SDK_DIR}/hdf5/src/H5Edeprec.c"
		"${SDK_DIR}/hdf5/src/H5Eint.c"
		"${SDK_DIR}/hdf5/src/H5Edefin.h"
		"${SDK_DIR}/hdf5/src/H5Einit.h"
		"${SDK_DIR}/hdf5/src/H5Epkg.h"
		"${SDK_DIR}/hdf5/src/H5Epubgen.h"
		"${SDK_DIR}/hdf5/src/H5Eprivate.h"
		"${SDK_DIR}/hdf5/src/H5Epublic.h"
		"${SDK_DIR}/hdf5/src/H5Eterm.h"
	SOURCE_GROUP "H5F"
		"${SDK_DIR}/hdf5/src/H5F.c"
		"${SDK_DIR}/hdf5/src/H5Fint.c"
		"${SDK_DIR}/hdf5/src/H5Faccum.c"
		"${SDK_DIR}/hdf5/src/H5Fcwfs.c"
		"${SDK_DIR}/hdf5/src/H5Fdbg.c"
		"${SDK_DIR}/hdf5/src/H5Fefc.c"
		"${SDK_DIR}/hdf5/src/H5Ffake.c"
		"${SDK_DIR}/hdf5/src/H5Fio.c"
		"${SDK_DIR}/hdf5/src/H5Fmount.c"
		"${SDK_DIR}/hdf5/src/H5Fmpi.c"
		"${SDK_DIR}/hdf5/src/H5Fquery.c"
		"${SDK_DIR}/hdf5/src/H5Fsfile.c"
		"${SDK_DIR}/hdf5/src/H5Fsuper.c"
		"${SDK_DIR}/hdf5/src/H5Fsuper_cache.c"
		"${SDK_DIR}/hdf5/src/H5Ftest.c"
		"${SDK_DIR}/hdf5/src/H5Fpkg.h"
		"${SDK_DIR}/hdf5/src/H5Fprivate.h"
		"${SDK_DIR}/hdf5/src/H5Fpublic.h"
	SOURCE_GROUP "H5FD"
		"${SDK_DIR}/hdf5/src/H5FD.c"
		"${SDK_DIR}/hdf5/src/H5FDcore.c"
		"${SDK_DIR}/hdf5/src/H5FDdirect.c"
		"${SDK_DIR}/hdf5/src/H5FDfamily.c"
		"${SDK_DIR}/hdf5/src/H5FDint.c"
		"${SDK_DIR}/hdf5/src/H5FDlog.c"
		"${SDK_DIR}/hdf5/src/H5FDmpi.c"
		"${SDK_DIR}/hdf5/src/H5FDmpio.c"
		"${SDK_DIR}/hdf5/src/H5FDmulti.c"
		"${SDK_DIR}/hdf5/src/H5FDsec2.c"
		"${SDK_DIR}/hdf5/src/H5FDspace.c"
		"${SDK_DIR}/hdf5/src/H5FDstdio.c"
		"${SDK_DIR}/hdf5/src/H5FDwindows.c"
		"${SDK_DIR}/hdf5/src/H5FDcore.h"
		"${SDK_DIR}/hdf5/src/H5FDdirect.h"
		"${SDK_DIR}/hdf5/src/H5FDfamily.h"
		"${SDK_DIR}/hdf5/src/H5FDlog.h"
		"${SDK_DIR}/hdf5/src/H5FDmpi.h"
		"${SDK_DIR}/hdf5/src/H5FDmpio.h"
		"${SDK_DIR}/hdf5/src/H5FDmulti.h"
		"${SDK_DIR}/hdf5/src/H5FDpkg.h"
		"${SDK_DIR}/hdf5/src/H5FDprivate.h"
		"${SDK_DIR}/hdf5/src/H5FDpublic.h"
		"${SDK_DIR}/hdf5/src/H5FDsec2.h"
		"${SDK_DIR}/hdf5/src/H5FDstdio.h"
		"${SDK_DIR}/hdf5/src/H5FDwindows.h"
	SOURCE_GROUP "H5FL"
		"${SDK_DIR}/hdf5/src/H5FL.c"
		"${SDK_DIR}/hdf5/src/H5Lpkg.h"
		"${SDK_DIR}/hdf5/src/H5FLprivate.h"
		"${SDK_DIR}/hdf5/src/H5Lpublic.h"
	SOURCE_GROUP "H5FO"
		"${SDK_DIR}/hdf5/src/H5FO.c"
		"${SDK_DIR}/hdf5/src/H5FOprivate.h"
	SOURCE_GROUP "H5FS"
		"${SDK_DIR}/hdf5/src/H5FS.c"
		"${SDK_DIR}/hdf5/src/H5FScache.c"
		"${SDK_DIR}/hdf5/src/H5FSdbg.c"
		"${SDK_DIR}/hdf5/src/H5FSsection.c"
		"${SDK_DIR}/hdf5/src/H5FSstat.c"
		"${SDK_DIR}/hdf5/src/H5FStest.c"
		"${SDK_DIR}/hdf5/src/H5FSpkg.h"
		"${SDK_DIR}/hdf5/src/H5FSprivate.h"
		"${SDK_DIR}/hdf5/src/H5FSpublic.h"
	SOURCE_GROUP "H5G"
		"${SDK_DIR}/hdf5/src/H5G.c"
		"${SDK_DIR}/hdf5/src/H5Gbtree2.c"
		"${SDK_DIR}/hdf5/src/H5Gcache.c"
		"${SDK_DIR}/hdf5/src/H5Gcompact.c"
		"${SDK_DIR}/hdf5/src/H5Gdense.c"
		"${SDK_DIR}/hdf5/src/H5Gdeprec.c"
		"${SDK_DIR}/hdf5/src/H5Gent.c"
		"${SDK_DIR}/hdf5/src/H5Gint.c"
		"${SDK_DIR}/hdf5/src/H5Glink.c"
		"${SDK_DIR}/hdf5/src/H5Gloc.c"
		"${SDK_DIR}/hdf5/src/H5Gname.c"
		"${SDK_DIR}/hdf5/src/H5Gnode.c"
		"${SDK_DIR}/hdf5/src/H5Gobj.c"
		"${SDK_DIR}/hdf5/src/H5Goh.c"
		"${SDK_DIR}/hdf5/src/H5Groot.c"
		"${SDK_DIR}/hdf5/src/H5Gstab.c"
		"${SDK_DIR}/hdf5/src/H5Gtest.c"
		"${SDK_DIR}/hdf5/src/H5Gtraverse.c"
		"${SDK_DIR}/hdf5/src/H5Gpkg.h"
		"${SDK_DIR}/hdf5/src/H5Gprivate.h"
		"${SDK_DIR}/hdf5/src/H5Gpublic.h"
	SOURCE_GROUP "H5HF"
		"${SDK_DIR}/hdf5/src/H5HF.c"
		"${SDK_DIR}/hdf5/src/H5HFbtree2.c"
		"${SDK_DIR}/hdf5/src/H5HFcache.c"
		"${SDK_DIR}/hdf5/src/H5HFdbg.c"
		"${SDK_DIR}/hdf5/src/H5HFdblock.c"
		"${SDK_DIR}/hdf5/src/H5HFdtable.c"
		"${SDK_DIR}/hdf5/src/H5HFhdr.c"
		"${SDK_DIR}/hdf5/src/H5HFhuge.c"
		"${SDK_DIR}/hdf5/src/H5HFiblock.c"
		"${SDK_DIR}/hdf5/src/H5HFiter.c"
		"${SDK_DIR}/hdf5/src/H5HFman.c"
		"${SDK_DIR}/hdf5/src/H5HFsection.c"
		"${SDK_DIR}/hdf5/src/H5HFspace.c"
		"${SDK_DIR}/hdf5/src/H5HFstat.c"
		"${SDK_DIR}/hdf5/src/H5HFtest.c"
		"${SDK_DIR}/hdf5/src/H5HFtiny.c"
		"${SDK_DIR}/hdf5/src/H5HFpkg.h"
		"${SDK_DIR}/hdf5/src/H5HFprivate.h"
		"${SDK_DIR}/hdf5/src/H5HFpublic.h"
	SOURCE_GROUP "H5HG"
		"${SDK_DIR}/hdf5/src/H5HG.c"
		"${SDK_DIR}/hdf5/src/H5HGcache.c"
		"${SDK_DIR}/hdf5/src/H5HGdbg.c"
		"${SDK_DIR}/hdf5/src/H5HGquery.c"
		"${SDK_DIR}/hdf5/src/H5HGpkg.h"
		"${SDK_DIR}/hdf5/src/H5HGprivate.h"
		"${SDK_DIR}/hdf5/src/H5HGpublic.h"
	SOURCE_GROUP "H5HL"
		"${SDK_DIR}/hdf5/src/H5HL.c"
		"${SDK_DIR}/hdf5/src/H5HLcache.c"
		"${SDK_DIR}/hdf5/src/H5HLdbg.c"
		"${SDK_DIR}/hdf5/src/H5HLint.c"
		"${SDK_DIR}/hdf5/src/H5HLpkg.h"
		"${SDK_DIR}/hdf5/src/H5HLprivate.h"
		"${SDK_DIR}/hdf5/src/H5HLpublic.h"
		"${SDK_DIR}/hdf5/hl/src/H5HLprivate2.h"
	SOURCE_GROUP "H5HP"
		"${SDK_DIR}/hdf5/src/H5HP.c"
		"${SDK_DIR}/hdf5/src/H5HPprivate.h"
	SOURCE_GROUP "H5I"
		"${SDK_DIR}/hdf5/src/H5I.c"
		"${SDK_DIR}/hdf5/src/H5Itest.c"
		"${SDK_DIR}/hdf5/src/H5Ipkg.h"
		"${SDK_DIR}/hdf5/src/H5Iprivate.h"
		"${SDK_DIR}/hdf5/src/H5Ipublic.h"
	SOURCE_GROUP "H5IM"
		"${SDK_DIR}/hdf5/hl/src/H5IM.c"
		"${SDK_DIR}/hdf5/hl/src/H5IMprivate.h"
		"${SDK_DIR}/hdf5/hl/src/H5IMpublic.h"
	SOURCE_GROUP "H5L"
		"${SDK_DIR}/hdf5/src/H5L.c"
		"${SDK_DIR}/hdf5/src/H5Lexternal.c"
		"${SDK_DIR}/hdf5/src/H5Lprivate.h"
	SOURCE_GROUP "H5LT"
		"${SDK_DIR}/hdf5/hl/src/H5LT.c"
		"${SDK_DIR}/hdf5/hl/src/H5LTanalyze.c"
		"${SDK_DIR}/hdf5/hl/src/H5LTparse.c"
		"${SDK_DIR}/hdf5/hl/src/H5LTparse.h"
		"${SDK_DIR}/hdf5/hl/src/H5LTprivate.h"
		"${SDK_DIR}/hdf5/hl/src/H5LTpublic.h"
	SOURCE_GROUP "H5MF"
		"${SDK_DIR}/hdf5/src/H5MF.c"
		"${SDK_DIR}/hdf5/src/H5MFaggr.c"
		"${SDK_DIR}/hdf5/src/H5MFdbg.c"
		"${SDK_DIR}/hdf5/src/H5MFsection.c"
		"${SDK_DIR}/hdf5/src/H5MFprivate.h"
	SOURCE_GROUP "H5MM"
		"${SDK_DIR}/hdf5/src/H5MM.c"
		"${SDK_DIR}/hdf5/src/H5MMprivate.h"
		"${SDK_DIR}/hdf5/src/H5MMpublic.h"
	SOURCE_GROUP "H5MP"
		"${SDK_DIR}/hdf5/src/H5MPpkg.h"
		"${SDK_DIR}/hdf5/src/H5MPprivate.h"
	SOURCE_GROUP "H5O"
		"${SDK_DIR}/hdf5/src/H5O.c"
		"${SDK_DIR}/hdf5/src/H5Oainfo.c"
		"${SDK_DIR}/hdf5/src/H5Oalloc.c"
		"${SDK_DIR}/hdf5/src/H5Oattr.c"
		"${SDK_DIR}/hdf5/src/H5Oattribute.c"
		"${SDK_DIR}/hdf5/src/H5Obogus.c"
		"${SDK_DIR}/hdf5/src/H5Obtreek.c"
		"${SDK_DIR}/hdf5/src/H5Ocache.c"
		"${SDK_DIR}/hdf5/src/H5Ochunk.c"
		"${SDK_DIR}/hdf5/src/H5Ocont.c"
		"${SDK_DIR}/hdf5/src/H5Ocopy.c"
		"${SDK_DIR}/hdf5/src/H5Odbg.c"
		"${SDK_DIR}/hdf5/src/H5Odrvinfo.c"
		"${SDK_DIR}/hdf5/src/H5Odtype.c"
		"${SDK_DIR}/hdf5/src/H5Oefl.c"
		"${SDK_DIR}/hdf5/src/H5Ofill.c"
		"${SDK_DIR}/hdf5/src/H5Oginfo.c"
		"${SDK_DIR}/hdf5/src/H5Olayout.c"
		"${SDK_DIR}/hdf5/src/H5Olinfo.c"
		"${SDK_DIR}/hdf5/src/H5Olink.c"
		"${SDK_DIR}/hdf5/src/H5Omessage.c"
		"${SDK_DIR}/hdf5/src/H5Omtime.c"
		"${SDK_DIR}/hdf5/src/H5Oname.c"
		"${SDK_DIR}/hdf5/src/H5Onull.c"
		"${SDK_DIR}/hdf5/src/H5Opline.c"
		"${SDK_DIR}/hdf5/src/H5Orefcount.c"
		"${SDK_DIR}/hdf5/src/H5Osdspace.c"
		"${SDK_DIR}/hdf5/src/H5Oshared.c"
		"${SDK_DIR}/hdf5/src/H5Oshmesg.c"
		"${SDK_DIR}/hdf5/src/H5Ostab.c"
		"${SDK_DIR}/hdf5/src/H5Otest.c"
		"${SDK_DIR}/hdf5/src/H5Ounknown.c"
		"${SDK_DIR}/hdf5/src/H5Opkg.h"
		"${SDK_DIR}/hdf5/src/H5Oprivate.h"
		"${SDK_DIR}/hdf5/src/H5Opublic.h"
		"${SDK_DIR}/hdf5/src/H5Oshared.h"
	SOURCE_GROUP "H5P"
		"${SDK_DIR}/hdf5/src/H5P.c"
		"${SDK_DIR}/hdf5/src/H5Pacpl.c"
		"${SDK_DIR}/hdf5/src/H5Pdapl.c"
		"${SDK_DIR}/hdf5/src/H5Pdcpl.c"
		"${SDK_DIR}/hdf5/src/H5Pdeprec.c"
		"${SDK_DIR}/hdf5/src/H5Pdxpl.c"
		"${SDK_DIR}/hdf5/src/H5Pfapl.c"
		"${SDK_DIR}/hdf5/src/H5Pfcpl.c"
		"${SDK_DIR}/hdf5/src/H5Pfmpl.c"
		"${SDK_DIR}/hdf5/src/H5Pgcpl.c"
		"${SDK_DIR}/hdf5/src/H5Pint.c"
		"${SDK_DIR}/hdf5/src/H5Plapl.c"
		"${SDK_DIR}/hdf5/src/H5Plcpl.c"
		"${SDK_DIR}/hdf5/src/H5Pocpl.c"
		"${SDK_DIR}/hdf5/src/H5Pocpypl.c"
		"${SDK_DIR}/hdf5/src/H5Pstrcpl.c"
		"${SDK_DIR}/hdf5/src/H5Ptest.c"
		"${SDK_DIR}/hdf5/src/H5Ppkg.h"
		"${SDK_DIR}/hdf5/src/H5Pprivate.h"
		"${SDK_DIR}/hdf5/src/H5Ppublic.h"
	SOURCE_GROUP "H5PL"
		"${SDK_DIR}/hdf5/src/H5PL.c"
		"${SDK_DIR}/hdf5/src/H5PLextern.h"
		"${SDK_DIR}/hdf5/src/H5PLprivate.h"
		"${SDK_DIR}/hdf5/src/H5PLpublic.h"
	SOURCE_GROUP "H5PT"
		"${SDK_DIR}/hdf5/hl/src/H5PT.c"
		"${SDK_DIR}/hdf5/hl/src/H5PTprivate.h"
		"${SDK_DIR}/hdf5/hl/src/H5PTpublic.h"
	SOURCE_GROUP "H5R"
		"${SDK_DIR}/hdf5/src/H5R.c"
		"${SDK_DIR}/hdf5/src/H5Rdeprec.c"
		"${SDK_DIR}/hdf5/src/H5Rpkg.h"
		"${SDK_DIR}/hdf5/src/H5Rprivate.h"
		"${SDK_DIR}/hdf5/src/H5Rpublic.h"
	SOURCE_GROUP "H5RC"
		"${SDK_DIR}/hdf5/src/H5RC.c"
		"${SDK_DIR}/hdf5/src/H5RCprivate.h"
	SOURCE_GROUP "H5RS"
		"${SDK_DIR}/hdf5/src/H5RS.c"
		"${SDK_DIR}/hdf5/src/H5RSprivate.h"
	SOURCE_GROUP "H5S"
		"${SDK_DIR}/hdf5/src/H5S.c"
		"${SDK_DIR}/hdf5/src/H5Sall.c"
		"${SDK_DIR}/hdf5/src/H5Sdbg.c"
		"${SDK_DIR}/hdf5/src/H5Shyper.c"
		"${SDK_DIR}/hdf5/src/H5Smpio.c"
		"${SDK_DIR}/hdf5/src/H5Snone.c"
		"${SDK_DIR}/hdf5/src/H5Spoint.c"
		"${SDK_DIR}/hdf5/src/H5Sselect.c"
		"${SDK_DIR}/hdf5/src/H5Stest.c"
		"${SDK_DIR}/hdf5/src/H5Spkg.h"
		"${SDK_DIR}/hdf5/src/H5Sprivate.h"
		"${SDK_DIR}/hdf5/src/H5Spublic.h"
	SOURCE_GROUP "H5SL"
		"${SDK_DIR}/hdf5/src/H5SL.c"
		"${SDK_DIR}/hdf5/src/H5SLprivate.h"
	SOURCE_GROUP "H5SM"
		"${SDK_DIR}/hdf5/src/H5SM.c"
		"${SDK_DIR}/hdf5/src/H5SMbtree2.c"
		"${SDK_DIR}/hdf5/src/H5SMcache.c"
		"${SDK_DIR}/hdf5/src/H5SMmessage.c"
		"${SDK_DIR}/hdf5/src/H5SMtest.c"
		"${SDK_DIR}/hdf5/src/H5SMpkg.h"
		"${SDK_DIR}/hdf5/src/H5SMprivate.h"
	SOURCE_GROUP "H5ST"
		"${SDK_DIR}/hdf5/src/H5ST.c"
		"${SDK_DIR}/hdf5/src/H5Tprivate.h"
	SOURCE_GROUP "H5T"
		"${SDK_DIR}/hdf5/src/H5T.c"
		"${SDK_DIR}/hdf5/src/H5Tarray.c"
		"${SDK_DIR}/hdf5/src/H5Tbit.c"
		"${SDK_DIR}/hdf5/src/H5Tcommit.c"
		"${SDK_DIR}/hdf5/src/H5Tcompound.c"
		"${SDK_DIR}/hdf5/src/H5Tconv.c"
		"${SDK_DIR}/hdf5/src/H5Tcset.c"
		"${SDK_DIR}/hdf5/src/H5Tdbg.c"
		"${SDK_DIR}/hdf5/src/H5Tdeprec.c"
		"${SDK_DIR}/hdf5/src/H5Tenum.c"
		"${SDK_DIR}/hdf5/src/H5Tfields.c"
		"${SDK_DIR}/hdf5/src/H5Tfixed.c"
		"${SDK_DIR}/hdf5/src/H5Tfloat.c"
		"${SDK_DIR}/hdf5/src/H5Tnative.c"
		"${SDK_DIR}/hdf5/src/H5Toffset.c"
		"${SDK_DIR}/hdf5/src/H5Toh.c"
		"${SDK_DIR}/hdf5/src/H5Topaque.c"
		"${SDK_DIR}/hdf5/src/H5Torder.c"
		"${SDK_DIR}/hdf5/src/H5Tpad.c"
		"${SDK_DIR}/hdf5/src/H5Tprecis.c"
		"${SDK_DIR}/hdf5/src/H5Tstrpad.c"
		"${SDK_DIR}/hdf5/src/H5Tvisit.c"
		"${SDK_DIR}/hdf5/src/H5Tvlen.c"
		"${SDK_DIR}/hdf5/src/H5Tpkg.h"
		"${SDK_DIR}/hdf5/src/H5Tprivate.h"
		"${SDK_DIR}/hdf5/src/H5Tpublic.h"
	SOURCE_GROUP "H5TB"
		"${SDK_DIR}/hdf5/hl/src/H5TB.c"
		"${SDK_DIR}/hdf5/hl/src/H5TBprivate.h"
		"${SDK_DIR}/hdf5/hl/src/H5TBpublic.h"
	SOURCE_GROUP "H5TS"
		"${SDK_DIR}/hdf5/src/H5TS.c"
		"${SDK_DIR}/hdf5/src/H5TSprivate.h"
	SOURCE_GROUP "H5VM"
		"${SDK_DIR}/hdf5/src/H5VM.c"
		"${SDK_DIR}/hdf5/src/H5VMprivate.h"
	SOURCE_GROUP "H5WB"
		"${SDK_DIR}/hdf5/src/H5WB.c"
		"${SDK_DIR}/hdf5/src/H5WBprivate.h"
	SOURCE_GROUP "H5Z"
		"${SDK_DIR}/hdf5/src/H5Z.c"
		"${SDK_DIR}/hdf5/src/H5Zdeflate.c"
		"${SDK_DIR}/hdf5/src/H5Zfletcher32.c"
		"${SDK_DIR}/hdf5/src/H5Znbit.c"
		"${SDK_DIR}/hdf5/src/H5Zscaleoffset.c"
		"${SDK_DIR}/hdf5/src/H5Zshuffle.c"
		"${SDK_DIR}/hdf5/src/H5Zszip.c"
		"${SDK_DIR}/hdf5/src/H5Ztrans.c"
		"${SDK_DIR}/hdf5/src/H5Zpkg.h"
		"${SDK_DIR}/hdf5/src/H5Zprivate.h"
		"${SDK_DIR}/hdf5/src/H5Zpublic.h"
	SOURCE_GROUP "Root"
		"${SDK_DIR}/hdf5/src/hdf5.h"
		"${SDK_DIR}/hdf5/hl/src/hdf5_hl.h"
)

# -- h5libsettings.waf_files --
sources_platform(ALL)
add_sources("NoUberFile"
	PROJECTS H5LibSettings
	SOURCE_GROUP "Root"
	    "${SDK_DIR}/hdf5/src/H5make_libsettings.c"
)

# -- h5detect.waf_files --
sources_platform(ALL)
add_sources("NoUberFile"
	PROJECTS H5Detect
	SOURCE_GROUP "Root"
	    "${SDK_DIR}/hdf5/src/H5detect.c"
)

end_sources()
#END-FILE-LIST

if(WIN32)
	set(DISABLE_WARNINGS /W0)
	set(PLATFORM_INCLUDE_DIR "${CRY_LIBS_DIR}/hdf5/windows")
elseif(LINUX)
	set(DISABLE_WARNINGS
		-Wno-macro-redefined
		-Wno-int-conversion
		-Wno-incompatible-pointer-types-discards-qualifiers
		-Wno-implicit-function-declaration
		-Wno-self-assign
		-Wno-sometimes-uninitialized
		-Wno-tautological-constant-out-of-range-compare
		-Wno-unused-label
		-Wno-non-literal-null-conversion
		-Wno-unknown-warning-option
		-Wno-deprecated-declarations
		)
	set(PLATFORM_INCLUDE_DIR "${CRY_LIBS_DIR}/hdf5/linux")
endif()

CryEngineStaticModule(hdf5 SOLUTION_FOLDER "Libs")
target_include_directories(${THIS_PROJECT} PRIVATE "${SDK_DIR}/hdf5/src" "${SDK_DIR}/hdf5/hl/src" ${PLATFORM_INCLUDE_DIR})
target_compile_options(${THIS_PROJECT} PRIVATE ${DISABLE_WARNINGS} ) # Disable warnings for 3rdParty code.
target_compile_definitions(${THIS_PROJECT} PRIVATE -D__STDC_VERSION__=199901L )
target_link_libraries( ${THIS_PROJECT} PRIVATE zlib)
if (HAVE_SZIP)
	message(STATUS "Using SZIP")
	target_link_libraries( ${THIS_PROJECT} PRIVATE szip )
	target_compile_definitions(${THIS_PROJECT} PRIVATE -DH5_HAVE_SZLIB_H=1 )
	target_compile_definitions(${THIS_PROJECT} PRIVATE -DH5_HAVE_FILTER_SZIP=1 )
endif()
target_include_directories(${THIS_PROJECT} INTERFACE 
	"${CMAKE_CURRENT_SOURCE_DIR}" # For the configuration files.
	"${SDK_DIR}/hdf5/src" 
	"${SDK_DIR}/hdf5/hl/src"
	 ${PLATFORM_INCLUDE_DIR}
)

# Tool used by h5build.bat to generate H5Tinit.c
CryConsoleApplication(H5Detect SOLUTION_FOLDER "Tools/HDF5")
target_include_directories(${THIS_PROJECT} PRIVATE "${SDK_DIR}/hdf5/src" ${PLATFORM_INCLUDE_DIR})
target_compile_options(${THIS_PROJECT} PRIVATE ${DISABLE_WARNINGS})

# Tool used by h5build.bat to generate H5lib_settings.c
CryConsoleApplication(H5LibSettings SOLUTION_FOLDER "Tools/HDF5")
target_include_directories(${THIS_PROJECT} PRIVATE "${SDK_DIR}/hdf5/src" ${PLATFORM_INCLUDE_DIR})
target_compile_options(${THIS_PROJECT} PRIVATE ${DISABLE_WARNINGS})
